--- a/cluster/apps/homepage/homepage-configmap.yaml
+++ b/cluster/apps/homepage/homepage-configmap.yaml
@@ -4,29 +4,32 @@ metadata:
   name: homepage-config
   namespace: media-stack
 data:
-  bookmarks.yaml: |
-    - Search:
-        - Google:
-            href: "https://google.com"
-        - DuckDuckGo:
-            href: "https://duckduckgo.com"
+  # --- General Settings ---
+  settings.yaml: |
+    title: Mi Homelab
+    background: https://images.unsplash.com/photo-1470813740244-df37b8c1edcb
+    search:
+      provider: google
+      target: _blank
 
+  # --- Services ---
+  # Leave this empty for now to fix the error
+  services.yaml: |
+    - "Mis Aplicaciones":
+        - Sonarr:
+            href: http://series.homelab.local
+            icon: sonarr.png
+
+  # --- Bookmarks ---
+  bookmarks.yaml: |
+    - Búsqueda:
+        - Google:
+            href: https://google.com
+
+  # --- Widgets ---
+  # Keep your cluster widget
   widgets.yaml: |
     - resources:
-        label: "Cluster"
+        label: Cluster
         cpu: true
         memory: true
-
-  services.yaml: |
-    - "Test":
-        - Google:
-            href: "https://google.com"
-            description: "Test service"
-
-  settings.yaml: |
-    title: "Mi Homelab"
-    search:
-      provider: "google"  # Only the simple identifier for v0.10.9
-      target: "_blank"
-    appearance:
-      theme: "dark"
