--- a/cluster/apps/homepage/homepage-configmap.yaml
+++ b/cluster/apps/homepage/homepage-configmap.yaml
@@ -14,15 +14,54 @@ data:
 
   # --- Services ---
   services.yaml: |
-    # Dejado en blanco para la prueba
+    - "Mis Aplicaciones":
+        - Sonarr:
+            href: http://series.homelab.local
+            icon: sonarr.png
+        - Radarr:
+            href: http://movies.homelab.local
+            icon: radarr.png
+        - Lidarr:
+            href: http://music.homelab.local
+            icon: lidarr.png
+        - Prowlarr:
+            href: http://prowlarr.homelab.local
+            icon: prowlarr.png
+        - qBittorrent:
+            href: http://downloads.homelab.local
+            icon: qbittorrent.png
+        - Commafeed:
+            href: http://rss.homelab.local
+            icon: commafeed.png
+        - Plex:
+            href: http://plex.homelab.local
+            icon: plex.png
+
+    - "Infraestructura":
+        - Traefik:
+            href: http://traefik.homelab.local/dashboard/#/
+            icon: traefik.png
+            description: Dashboard de Traefik
+        - AdGuard:
+            href: http://adguard.homelab.local
+            icon: adguard-home.png
+            description: Bloqueador de Anuncios
+        - pgAdmin:
+            href: http://pgadmin.homelab.local
+            icon: pgadmin.png
+            description: Administrador de PostgreSQL
 
   # --- Bookmarks ---
   bookmarks.yaml: |
     - Búsqueda:
         - Google:
             href: https://google.com
+            # Abbreviation is optional
+            abbr: G
         - DuckDuckGo:
             href: https://duckduckgo.com
+            description: Motor de búsqueda privado
+            abbr: DDG
 
   # --- Widgets ---
   widgets.yaml: |
