--- a/cluster/apps/homepage/homepage-deployment.yaml
+++ b/cluster/apps/homepage/homepage-deployment.yaml
@@ -18,15 +18,13 @@ spec:
     spec:
       containers:
         - name: homepage
-          image: ghcr.io/gethomepage/homepage:latest
+          # Use a specific, stable version instead of latest
+          image: ghcr.io/gethomepage/homepage:v0.9.5
           env:
             - name: HOMEPAGE_ALLOWED_HOSTS
               value: "home.homelab.local"
           ports:
             - containerPort: 3000
-          # La sección de volumeMounts se ha eliminado
-
-      # La sección de volumes se ha eliminado
 
 ---
 
