--- a/cluster/apps/homepage/homepage-deployment.yaml
+++ b/cluster/apps/homepage/homepage-deployment.yaml
@@ -18,21 +18,26 @@ spec:
     spec:
       containers:
         - name: homepage
+          # Use a specific, stable version instead of latest
           image: ghcr.io/gethomepage/homepage:v0.9.5
           env:
             - name: HOMEPAGE_ALLOWED_HOSTS
               value: "home.homelab.local"
           ports:
             - containerPort: 3000
+          # Add these lines to mount the configmap
           volumeMounts:
             - name: config
               mountPath: /app/config
               readOnly: true
+      # Add this section to define the volume
       volumes:
         - name: config
           configMap:
             name: homepage-config
+
 ---
+
 apiVersion: v1
 kind: Service
 metadata:
@@ -44,7 +49,9 @@ spec:
   ports:
     - port: 3000
       targetPort: 3000
+
 ---
+
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
