--- a/cluster/apps/homepage/homepage-configmap.yaml
+++ b/cluster/apps/homepage/homepage-configmap.yaml
@@ -4,13 +4,16 @@ metadata:
   name: homepage-config
   namespace: media-stack
 data:
+  # We only need settings.yaml for the app to start
   settings.yaml: |
     ---
     title: Mi Homelab
-    background: "#2F4F4F"
+    background: "#121212"
+
+  # Leave other files empty for now
   services.yaml: |
     ---
-    - "Infraestructura":
-        - Traefik:
-            href: "http://traefik.homelab.local/dashboard/#/"
-            icon: traefik.png
+  bookmarks.yaml: |
+    ---
+  widgets.yaml: |
+    ---
