--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -1,9 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
- # Le decimos a Flux que gestione estos dos nuevos "instaladores"
  - ./metallb-install.yaml
  - ./metallb-config.yaml
+ - ./networking-adguard.yaml 
+ - ./traefik-install.yaml
  - ./traefik-system 
  - ./networking/
  - ./media 
