--- a/cluster/apps/networking/adguard/service.yaml
+++ b/cluster/apps/networking/adguard/service.yaml
@@ -7,6 +7,7 @@ metadata:
     app: adguard-home
 spec:
   type: LoadBalancer
+  loadBalancerIP: 192.168.1.46
   selector:
     app: adguard-home
   ports:
