--- a/cluster/apps/media/media-browser.yaml
+++ b/cluster/apps/media/media-browser.yaml
@@ -47,7 +47,7 @@ spec:
   ports:
   - port: 80
     targetPort: 80
-  type: LoadBalancer
+  type: ClusterIP
 ---
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
