fix(homepage): Add  X-Forwarded-Host for validation of host

--- a/cluster/apps/homepage/config.yaml
+++ b/cluster/apps/homepage/config.yaml
@@ -1,62 +1,19 @@
-# cluster/apps/homepage/config.yaml
+# homepage-config-fix.yaml
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: homepage-settings
   namespace: media-stack
-data: 
+data:
   settings.yaml: |
+    # Habilita el reenvío de host para la validación
     connectivityCheck:
       forwards:
         - "X-Forwarded-Host"
+    
     title: Mi Homelab
     background: "#2F4F4F"
     providers:
       search:
         provider: google
         target: _blank
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: homepage-services
-  namespace: media-stack
-data:
-  services.yaml: |
-    - "Mis Aplicaciones":
-        - Sonarr:
-            href: http://series.homelab.local
-            icon: sonarr.png
-        - Radarr:
-            href: http://movies.homelab.local
-            icon: radarr.png
-
-    - "Infraestructura":
-        - Traefik:
-            href: http://traefik.homelab.local/dashboard/#/
-            icon: traefik.png
-            description: Dashboard de Traefik
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: homepage-bookmarks
-  namespace: media-stack
-data:
-  bookmarks.yaml: |
-    - Búsqueda:
-        - Google:
-            href: https://google.com
-            abbr: G
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: homepage-widgets
-  namespace: media-stack
-data:
-  widgets.yaml: |
-    - resources:
-        label: Cluster
-        cpu: true
-        memory: true
