--- a/cluster/apps/homepage/deployment.yaml
+++ b/cluster/apps/homepage/deployment.yaml
@@ -13,15 +13,32 @@ spec:
       app: homepage
   template:
     metadata:
+      annotations:
+        # Forza un reinicio del pod al aplicar este cambio
+        restartedAt: "2025-07-17T16:30:00Z"
       labels:
         app: homepage
     spec:
       containers:
         - name: homepage
-          image: "ghcr.io/gethomepage/homepage:latest"
-          imagePullPolicy: Always
+          # Se fija una versión específica para mayor estabilidad
+          image: "ghcr.io/gethomepage/homepage:v0.9.4"
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 3000
+          # Sondas de salud para que Kubernetes gestione mejor el pod
+          livenessProbe:
+            httpGet:
+              path: /api/health
+              port: 3000
+            initialDelaySeconds: 30
+            periodSeconds: 15
+          readinessProbe:
+            httpGet:
+              path: /api/health
+              port: 3000
+            initialDelaySeconds: 5
+            periodSeconds: 5
           volumeMounts:
             - name: settings
               mountPath: /app/config/settings.yaml
