feat(traefik): Habilita los logs de acceso para depuración

--- a/cluster/apps/traefik-system/helm-release.yaml
+++ b/cluster/apps/traefik-system/helm-release.yaml
@@ -15,6 +15,10 @@ spec:
         name: traefik
         namespace: flux-system
   values:
+    # --- INICIO DEL CAMBIO ---
+    accessLogs:
+      enabled: true
+    # --- FIN DEL CAMBIO ---
     service:
       type: LoadBalancer
       loadBalancerIP: 192.168.1.50
