fix(glance): Corrige el nombre de la imagen del contenedor

--- a/cluster/apps/glance/deployment.yaml
+++ b/cluster/apps/glance/deployment.yaml
@@ -18,7 +18,7 @@ spec:
       serviceAccountName: glance
       containers:
         - name: glance
-          image: lscr.io/linuxserver/glances:latest
+          image: glace/dashboard:latest
           env:
             - name: TZ
               value: "America/Mexico_City"
