--- a/cluster/apps/glace/networking.yaml
+++ b/cluster/apps/glace/networking.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: glance
-  namespace: glance
+  name: glace
+  namespace: glace
 spec:
   selector:
-    app: glance
+    app: glace
   ports:
     - name: http
       port: 80
@@ -14,14 +14,14 @@ spec:
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
-  name: glance
-  namespace: glance
+  name: glace
+  namespace: glace
 spec:
   entryPoints:
     - web
   routes:
-    - match: Host(`glance.homelab.local`)
+    - match: Host(`glace.homelab.local`)
       kind: Rule
       services:
-        - name: glance
+        - name: glace
           port: 80
