--- a/cluster/apps/glace/pvc.yaml
+++ b/cluster/apps/glace/pvc.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: glance-config
-  namespace: glance
+  name: glace-config
+  namespace: glace
 spec:
   accessModes:
     - ReadWriteOnce
