--- a/cluster/apps/homepage/kustomization.yaml
+++ b/cluster/apps/homepage/kustomization.yaml
@@ -1,8 +1,11 @@
+# cluster/apps/homepage/kustomization.yaml
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
   - rbac.yaml
-  - pvc.yaml
+  - secret.yaml
+  - configmap.yaml
   - deployment.yaml
-  - networking.yaml
+  - service.yaml
+  - ingress.yaml
