--- a/cluster/apps/homepage/rbac.yaml
+++ b/cluster/apps/homepage/rbac.yaml
@@ -5,6 +5,15 @@ metadata:
   name: homepage
   namespace: homepage
 ---
+apiVersion: v1
+kind: Secret
+type: kubernetes.io/service-account-token
+metadata:
+  name: homepage
+  namespace: homepage
+  annotations:
+    kubernetes.io/service-account.name: homepage
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
