--- a/cluster/apps/homepage/deployment.yaml
+++ b/cluster/apps/homepage/deployment.yaml
@@ -19,14 +19,36 @@ spec:
       serviceAccountName: homepage
       containers:
         - name: homepage
-          image: ghcr.io/gethomepage/homepage:v1.4.0
+          image: ghcr.io/gethomepage/homepage:latest
           ports:
             - name: http
               containerPort: 3000
           volumeMounts:
-            - name: config
-              mountPath: /app/config
+            - mountPath: /app/config/bookmarks.yaml
+              name: homepage-config
+              subPath: bookmarks.yaml
+            - mountPath: /app/config/docker.yaml
+              name: homepage-config
+              subPath: docker.yaml
+            - mountPath: /app/config/kubernetes.yaml
+              name: homepage-config
+              subPath: kubernetes.yaml
+            - mountPath: /app/config/services.yaml
+              name: homepage-config
+              subPath: services.yaml
+            - mountPath: /app/config/settings.yaml
+              name: homepage-config
+              subPath: settings.yaml
+            - mountPath: /app/config/widgets.yaml
+              name: homepage-config
+              subPath: widgets.yaml
+            - mountPath: /app/config/custom.css
+              name: homepage-config
+              subPath: custom.css
+            - mountPath: /app/config/custom.js
+              name: homepage-config
+              subPath: custom.js
       volumes:
-        - name: config
+        - name: homepage-config
           configMap:
             name: homepage-config
