--- a/cluster/apps/homepage/deployment.yaml
+++ b/cluster/apps/homepage/deployment.yaml
@@ -19,7 +19,7 @@ spec:
       serviceAccountName: homepage
       containers:
         - name: homepage
-          image: ghcr.io/gethomepage/homepage:latest
+          image: ghcr.io/gethomepage/homepage:v1.3.2
           ports:
             - name: http
               containerPort: 3000
