--- a/cluster/apps/homepage/deployment.yaml
+++ b/cluster/apps/homepage/deployment.yaml
@@ -20,6 +20,11 @@ spec:
       containers:
         - name: homepage
           image: ghcr.io/gethomepage/homepage:v1.3.2
+          # --- START OF CHANGE ---
+          env:
+            - name: HOMEPAGE_ALLOWED_HOSTS
+              value: homepage.homelab.local
+          # --- END OF CHANGE ---
           ports:
             - name: http
               containerPort: 3000
