feat: Add prometheus and grafana monitoring stack

--- a/cluster/apps/homepage/configmap.yaml
+++ b/cluster/apps/homepage/configmap.yaml
@@ -24,7 +24,7 @@ data:
   services.yaml: |
     - Networking:
         - Traefik:
-            href: http://traefik.homelab.local
+            href: http://traefik.homelab.local/dashboard/#/
             description: Traefik Dashboard
             icon: traefik
         - AdGuard:
