--- a/cluster/apps/monitoring/helm-release.yaml
+++ b/cluster/apps/monitoring/helm-release.yaml
@@ -8,37 +8,52 @@ spec:
   chart:
     spec:
       chart: kube-prometheus-stack
-      version: "57.0.2" 
+      version: "57.0.2"
       sourceRef:
         kind: HelmRepository
         name: prometheus-community
         namespace: flux-system
   values:
-    
     alertmanager:
       enabled: false
 
-    
     grafana:
       enabled: true
-    
       persistence:
         enabled: true
         type: pvc
-        storageClassName: "local-path" # Usamos tu StorageClass
+        storageClassName: "local-path"
         size: 2Gi
-    
       ingress:
         enabled: false
 
-    
     prometheus:
       prometheusSpec:
-        retention: 5d 
+        retention: 5d
         storageSpec:
           volumeClaimTemplate:
             spec:
-              storageClassName: "local-path" # Usamos tu StorageClass
+              storageClassName: "local-path"
               resources:
                 requests:
-                  storage: 10Gi # Asignamos 10Gi para las métricas
+                  storage: 10Gi
+        scrapeClasses:
+        - name: kubelet
+          honorLabels: true
+          jobName: "kube-prometheus-stack-kubelet"
+          kubernetesSdConfigs:
+          - role: node
+          relabelings:
+          - action: labelmap
+            regex: __meta_kubernetes_node_label_(.+)
+          - replacement: kubernetes.default.svc:443
+            targetLabel: __address__
+          - regex: (.+)
+            replacement: /api/v1/nodes/$1/proxy/metrics/cadvisor
+            sourceLabels:
+            - __meta_kubernetes_node_name
+            targetLabel: __metrics_path__
+          scheme: https
+          tlsConfig:
+            caFile: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+            insecureSkipVerify: true
