Fix: Correct flux dependencies for traefik and adguard

--- a/cluster/sources/kustomization.yaml
+++ b/cluster/sources/kustomization.yaml
@@ -6,4 +6,4 @@ resources:
   - bitnami.yaml
   - community-charts.yaml
   - jameswynn.yaml
-  - prometheus-community.yam
+  - prometheus-community.yaml
