Revert "feat: Add prometheus and grafana monitoring stack"
This reverts commit 38647c64b71c25d70bf994ee86655a7769e23f52.

--- a/cluster/apps/homepage/configmap.yaml
+++ b/cluster/apps/homepage/configmap.yaml
@@ -24,7 +24,7 @@ data:
   services.yaml: |
     - Networking:
         - Traefik:
-            href: http://traefik.homelab.local/dashboard/#/
+            href: http://traefik.homelab.local
             description: Traefik Dashboard
             icon: traefik
         - AdGuard:
