fix(metallb): Consolidate IPAddressPools to resolve conflict

--- a/cluster/apps/metallb/config/ip-pool.yaml
+++ b/cluster/apps/metallb/config/ip-pool.yaml
@@ -1,20 +1,11 @@
 apiVersion: metallb.io/v1beta1
 kind: IPAddressPool
 metadata:
-  name: static-pool
+  name: main-pool
   namespace: metallb-system
 spec:
   addresses:
-    - "192.168.1.45-192.168.1.50"
----
-apiVersion: metallb.io/v1beta1
-kind: IPAddressPool
-metadata:
-  name: dynamic-pool
-  namespace: metallb-system
-spec:
-  addresses:
-    - "192.168.1.55-192.168.1.64"
+    - "192.168.1.45-192.168.1.60"
 ---
 apiVersion: metallb.io/v1beta1
 kind: L2Advertisement
@@ -23,5 +14,4 @@ metadata:
   namespace: metallb-system
 spec:
   ipAddressPools:
-    - static-pool
-    - dynamic-pool
+    - main-pool
