Remove fixed LoadBalancerIP for Traefik to allow dynamic assignment

--- a/cluster/apps/traefik-system/helm-release.yaml
+++ b/cluster/apps/traefik-system/helm-release.yaml
@@ -15,13 +15,12 @@ spec:
         name: traefik
         namespace: flux-system
   values:
-    # --- INICIO DEL CAMBIO ---
     accessLogs:
       enabled: true
-    # --- FIN DEL CAMBIO ---
     service:
       type: LoadBalancer
-      loadBalancerIP: 192.168.1.50
+      # Remove or comment out the following line:
+      # loadBalancerIP: 192.168.1.50
     api:
       dashboard: true
       insecure: true
