--- a/cluster/apps/homepage/configmap.yaml
+++ b/cluster/apps/homepage/configmap.yaml
@@ -15,6 +15,11 @@ data:
     # Add any specific Homepage settings here
     # For example:
     # theme: dark
+    background:
+      image: https://images.unsplash.com/photo-1722231818801-f1a76d744923
+      opacity: 50 # Ajusta la opacidad si necesitas que el fondo de color se vea más
+    cardBlur: md # Aplica el desenfoque a las tarjetas. Opciones: xs, sm, md, lg, xl, 2xl, 3xl.
+                 # NOTA: Esto es incompatible con 'background.blur'
   bookmarks.yaml: |
     - Homelab:
         - GitHub:
@@ -64,7 +69,7 @@ data:
             href: http://pgadmin.homelab.local
             description: PostgreSQL Admin
             icon: pgadmin
-    - Monitoring: # New category
+    - Monitoring:
         - Grafana:
             href: http://grafana.homelab.local
             description: Metrics Dashboard
@@ -88,40 +93,10 @@ data:
         memory: true
 
   custom.css: |
-    /* Apply a full-screen background image */
-    body {
-      background-image: url('https://images.unsplash.com/photo-1722231818801-f1a76d744923'); /* Replace with your image URL */
-      background-size: cover;
-      background-position: center;
-      background-attachment: fixed; /* Keeps background fixed when scrolling */
-    }
-
-    /* Style for the main content areas to give them a glass effect */
-    .dashboard,
-    .dashboard-items .item,
-    .widget,
-    .card,
-    .services-container,
-    .service-group {
-      background: rgba(255, 255, 255, 0.1); /* White background with 10% opacity */
-      border-radius: 16px; /* Rounded corners */
-      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
-      backdrop-filter: blur(8px); /* Blur effect on the background behind the element */
-      -webkit-backdrop-filter: blur(8px); /* Safari support */
-      border: 1px solid rgba(255, 255, 255, 0.3); /* Light border for definition */
-      padding: 20px; /* Adjust padding as needed */
-      margin-bottom: 20px; /* Space between elements */
-    }
-
     /* Optional: Adjust text color for better readability on transparent backgrounds */
     body, h1, h2, h3, h4, h5, h6, p, span, a, .text-color {
       color: #f0f0f0; /* Light color for text */
       text-shadow: 1px 1px 2px rgba(0,0,0,0.5); /* Subtle shadow for text readability */
-    }
-
-    /* Adjust specific elements if they don't look right with the general styling */
-    .item-title, .item-description {
-      color: inherit; /* Inherit color from parent to apply new text color */
     }
 
     /* Make sure icons are visible */
