--- a/cluster/apps/homepage/deployment.yaml
+++ b/cluster/apps/homepage/deployment.yaml
@@ -21,9 +21,8 @@ spec:
         - name: homepage
           image: ghcr.io/gethomepage/homepage:v1.3.2
           # --- START OF CHANGE ---
-          env:
-            - name: HOMEPAGE_ALLOWED_HOSTS
-              value: homepage.homelab.local
+          environment:
+            -  HOMEPAGE_ALLOWED_HOSTS: homepage.homelab.local
           # --- END OF CHANGE ---
           ports:
             - name: http
