--- a/cluster/apps/homepage/deployment.yaml
+++ b/cluster/apps/homepage/deployment.yaml
@@ -19,11 +19,11 @@ spec:
       serviceAccountName: homepage
       containers:
         - name: homepage
-          image: ghcr.io/gethomepage/homepage:v1.4.0
+          image: ghcr.io/gethomepage/homepage:v0.10.9
           # --- START OF CHANGE ---
-          env:
-            - name: HOMEPAGE_ALLOWED_HOSTS
-              value: homepage.homelab.local
+         # env:
+         #   - name: HOMEPAGE_ALLOWED_HOSTS
+         #     value: homepage.homelab.local
           # --- END OF CHANGE ---
           ports:
             - name: http
