--- a/cluster/apps/media-stack/radarr/radarr-deployment.yaml
+++ b/cluster/apps/media-stack/radarr/radarr-deployment.yaml
@@ -35,7 +35,7 @@ spec:
             - name: config
               mountPath: /config
             - name: downloads 
-              mountPath: /downloads
+              mountPath: /movies
       volumes:
         - name: config
           persistentVolumeClaim:
