--- a/cluster/apps/media-stack/lidarr/lidarr-deployment.yaml
+++ b/cluster/apps/media-stack/lidarr/lidarr-deployment.yaml
@@ -35,7 +35,7 @@ spec:
             - name: config
               mountPath: /config
             - name: downloads 
-              mountPath: /downloads
+              mountPath: /media
       volumes:
         - name: config
           persistentVolumeClaim:
