--- a/cluster/apps/media-stack/sonarr/sonarr-deployment.yaml
+++ b/cluster/apps/media-stack/sonarr/sonarr-deployment.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
         - name: sonarr
-          image: lscr.io/linuxserver/sonarr:4.0.5 
+          image: lscr.io/linuxserver/sonarr:latest
           env:
             - name: PUID
               value: "1000"
