--- a/cluster/apps/media-stack/plex/plex-networking.yaml
+++ b/cluster/apps/media-stack/plex/plex-networking.yaml
@@ -6,6 +6,8 @@ metadata:
 spec:
   selector:
     app: plex
+  type: LoadBalancer
+  loadBalancerIP: 192.168.1.50
   ports:
     - name: http
       port: 32400
