--- a/cluster/apps/media-stack/jellyfin/jellyfin-networking.yaml
+++ b/cluster/apps/media-stack/jellyfin/jellyfin-networking.yaml
@@ -6,6 +6,8 @@ metadata:
 spec:
   selector:
     app: jellyfin
+  type: LoadBalancer
+  loadBalancerIP: 192.168.1.51
   ports:
     - name: http
       port: 8096
