--- a/cluster/apps/media-stack/lidarr/lidarr-deployment.yaml
+++ b/cluster/apps/media-stack/lidarr/lidarr-deployment.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
         - name: lidarr
-          image: lscr.io/linuxserver/lidarr:latest
+          image: blampe/lidarr:latest
           env:
             - name: PUID
               value: "1000"
