--- a/cluster/apps/media-stack/bazarr/bazarr-deployment.yaml
+++ b/cluster/apps/media-stack/bazarr/bazarr-deployment.yaml
@@ -17,6 +17,13 @@ spec:
       labels:
         app: bazarr
     spec:
+      initContainers:
+        - name: wait-for-smb
+          image: busybox:1.36
+          command: ['sh', '-c', 'until ls -A /media | grep .; do echo "waiting for SMB mount..."; sleep 5; done']
+          volumeMounts:
+            - name: downloads
+              mountPath: /media
       containers:
         - name: bazarr
           image: lscr.io/linuxserver/bazarr:latest
