--- a/cluster/apps/media-stack/plex/plex-deployment.yaml
+++ b/cluster/apps/media-stack/plex/plex-deployment.yaml
@@ -17,6 +17,13 @@ spec:
       labels:
         app: plex
     spec:
+      initContainers:
+        - name: wait-for-smb
+          image: busybox:1.36
+          command: ['sh', '-c', 'until ls -A /media | grep .; do echo "waiting for SMB mount..."; sleep 5; done']
+          volumeMounts:
+            - name: downloads
+              mountPath: /media
       containers:
         - name: plex
           image: lscr.io/linuxserver/plex:latest
