--- a/cluster/apps/media-stack/radarr/radarr-deployment.yaml
+++ b/cluster/apps/media-stack/radarr/radarr-deployment.yaml
@@ -18,6 +18,13 @@ spec:
       labels:
         app: radarr
     spec:
+      initContainers:
+        - name: wait-for-smb
+          image: busybox:1.36
+          command: ['sh', '-c', 'until ls -A /media | grep .; do echo "waiting for SMB mount..."; sleep 5; done']
+          volumeMounts:
+            - name: downloads
+              mountPath: /media
       containers:
         - name: radarr
           image: lscr.io/linuxserver/radarr:latest
