--- a/cluster/apps/media-stack/sonarr/sonarr-deployment.yaml
+++ b/cluster/apps/media-stack/sonarr/sonarr-deployment.yaml
@@ -18,6 +18,13 @@ spec:
       labels:
         app: sonarr
     spec:
+      initContainers:
+        - name: wait-for-smb
+          image: busybox:1.36
+          command: ['sh', '-c', 'until ls -A /media | grep .; do echo "waiting for SMB mount..."; sleep 5; done']
+          volumeMounts:
+            - name: downloads
+              mountPath: /media
       containers:
         - name: sonarr
           image: lscr.io/linuxserver/sonarr:latest
