--- a/cluster/apps/media-stack/bazarr/bazarr-deployment.yaml
+++ b/cluster/apps/media-stack/bazarr/bazarr-deployment.yaml
@@ -20,7 +20,7 @@ spec:
       initContainers:
         - name: wait-for-smb
           image: busybox:1.36
-          command: ['sh', '-c', 'until ls -A /media | grep .; do echo "waiting for SMB mount..."; sleep 5; done']
+          command: ['sh', '-c', 'until [ -d "/media/movies" ] && [ -d "/media/tv" ]; do echo "waiting for SMB subfolders..."; sleep 5; done']
           volumeMounts:
             - name: downloads
               mountPath: /media
