--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -1,16 +1,19 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
- - ./metallb-install.yaml
- - ./metallb-config.yaml
- - ./networking-adguard.yaml 
- - ./traefik-install.yaml
- #- ./traefik-system 
- #- ./networking/
- - ./media 
- - ./database 
- - ./media-stack
- - ./pgadmin
- - ./commafeed
- - ./homepage.yaml
- - ./monitoring.yaml 
+  # Instalaciones base con dependencias
+  - ./metallb-install.yaml
+  - ./metallb-config.yaml
+  - ./traefik-install.yaml
+
+  # Aplicaciones que dependen de las bases
+  - ./networking-adguard.yaml
+  - ./media.yaml
+  - ./database.yaml
+  - ./monitoring.yaml
+  - ./homepage.yaml
+
+  # Aplicaciones que dependen de otras apps (como database)
+  - ./pgadmin.yaml
+  - ./commafeed.yaml
+  - ./media-stack.yaml
