--- a/cluster/apps/media/media-browser.yaml
+++ b/cluster/apps/media/media-browser.yaml
@@ -34,7 +34,7 @@ spec:
       - name: media-volume
         hostPath:
           path: /mnt/windows-media
-          type: Directory
+          type: DirectoryOrCreate
 ---
 apiVersion: v1
 kind: Service
