fix(smb-mounter): Add tolerations to run on control-plane node

--- a/cluster/apps/media/smb-mounter.yaml
+++ b/cluster/apps/media/smb-mounter.yaml
@@ -12,6 +12,9 @@ spec:
       labels:
         app: smb-mounter
     spec:
+      tolerations:
+      - operator: Exists
+        effect: NoSchedule
       hostNetwork: true
       hostPID: true
       containers:
