fix(media-stack): Correct volumeMount name in initContainers

--- a/cluster/apps/media-stack/jellyfin/jellyfin-deployment.yaml
+++ b/cluster/apps/media-stack/jellyfin/jellyfin-deployment.yaml
@@ -40,7 +40,7 @@ spec:
           volumeMounts:
             - name: config
               mountPath: /config
-            - name: media # Montamos el SMB para que Jellyfin pueda escanearlo
+            - name: media 
               mountPath: /media
       volumes:
         - name: config
