--- a/cluster/apps/media-stack/bazarr/bazarr-deployment.yaml
+++ b/cluster/apps/media-stack/bazarr/bazarr-deployment.yaml
@@ -40,13 +40,13 @@ spec:
           volumeMounts:
             - name: config
               mountPath: /config
-            - name: media
+            - name: downloads
               mountPath: /media
       volumes:
         - name: config
           persistentVolumeClaim:
             claimName: bazarr-config
-        - name: media
+        - name: downloads
           hostPath:
             path: /mnt/windows-media
             type: Directory
