--- a/cluster/apps/media-stack/plex/plex-deployment.yaml
+++ b/cluster/apps/media-stack/plex/plex-deployment.yaml
@@ -20,7 +20,7 @@ spec:
       initContainers:
         - name: wait-for-smb
           image: busybox:1.36
-          command: ['sh', '-c', 'until [ -d "/media" ] && [ "$(ls -A /media)" ]; do echo "waiting for SMB mount to be populated..."; sleep 5; done']
+          command: ['sh', '-c', 'until mountpoint -q /media; do echo "waiting for SMB mount..."; sleep 5; done']
           volumeMounts:
             - name: media
               mountPath: /media
