--- a/cluster/base/kustomization.yaml
+++ b/cluster/base/kustomization.yaml
@@ -1,7 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./flux-system
-  - ./sources
-  - ./apps
-  - ./base
+  - ./smb-csi-driver-helm-release.yaml
+  - ./smb-storageclass.yaml
