feat: migrate persistence to smb-dynamic storageclass

--- a/cluster/apps/commafeed/helm-release-db.yaml
+++ b/cluster/apps/commafeed/helm-release-db.yaml
@@ -25,7 +25,7 @@ spec:
     primary:
       persistence:
         enabled: true
-        storageClass: "local-path"
+        storageClass: "smb-dynamic"
         size: 2Gi
       # Add initialization script for CommAFeed
       initdb:
