--- a/cluster/apps/database/helm-release.yaml
+++ b/cluster/apps/database/helm-release.yaml
@@ -20,5 +20,5 @@ spec:
     primary:
       persistence:
         enabled: true
-        storageClass: "local-path"
+        storageClass: "smb-dynamic"
         size: 8Gi
