--- a/cluster/apps/networking/adguard/pvc-config.yaml
+++ b/cluster/apps/networking/adguard/pvc-config.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: local-path
+  storageClassName: smb-dynamic
   resources:
     requests:
       storage: 1Gi
