--- a/cluster/apps/monitoring/helm-release.yaml
+++ b/cluster/apps/monitoring/helm-release.yaml
@@ -50,7 +50,7 @@ spec:
         storageSpec:
           volumeClaimTemplate:
             spec:
-              storageClassName: local-path
+              storageClassName: smb-dynamic
               accessModes: ["ReadWriteOnce"]
               resources:
                 requests:
